# python-notes-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  exceptions.py
app/api/: __init__.py  deps.py  enums.py
app/api/v1/: __init__.py
app/api/v1/notes/: notes_admin.py  notes_common_user.py  schemas.py
app/api/v1/users/: exception.py  schemas.py  users.py
app/config/: __init__.py  config.py
app/database/: __init__.py  factory.py
app/database/models/sql/: user.py
app/database/mongo/: client.py
app/database/repositories/: base.py
app/database/repositories/mongo/: notes.py  users.py
app/database/repositories/sql/: notes.py  users.py
app/database/sql/: session.py
app/schemas/: schemas.py  users.py
app/services/auth/: utils.py
app/services/notes/: notes.py
app/services/users/: users.py
app/utils/: fields.py
tests/integration/: conftest.py  test_notes_mongo_impl.py
tests/unit/: test_note_service.py
